llm-servers/deepsparse/gitops/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: deepsparse-text-generation
  labels:
    app: deepsparse-text-generation
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: deepsparse-text-generation
